Bug 622678: Empty valid region when resources are cleared. r=roc a=blocking-betan